--- a/public/style.css
+++ b/public/style.css
@@ -288,6 +288,18 @@ h1, h2, h3 {
   box-shadow: 0 1px 2px rgba(0,0,0,.1);
 }
 
+/* PAGE D’ACCUEIL */
+
+.presentation {
+  padding: 0 10px;
+}
+
+@media (min-width: 1025px) {
+  .presentation {
+    padding: initial;
+  }
+}
+
 /* CONNEXION */
 
 .form-container {
