--- a/public/style.css
+++ b/public/style.css
@@ -337,7 +337,7 @@ h1, h2, h3 {
 .favorites-index .favorite {
   background: #f9f9f9;
   display: block;
-  padding: 8px 10px;
+  padding: 10px;
 }
 
 @media (min-width: 1025px) {
