--- a/public/style.css
+++ b/public/style.css
@@ -1353,7 +1353,7 @@ h1, h2, h3 {
 }
 
 .input.textarea {
-  font-size: 1.2em;
+  font-size: 19px;
   width: 100%;
   resize: vertical;
   height: 200px;
