--- a/public/style.css
+++ b/public/style.css
@@ -363,6 +363,12 @@ h1, h2, h3 {
   }
 }
 
+.connection-error {
+  background: rgba(255,0,0,.1);
+  padding: 1em;
+  border-radius: 2px;
+}
+
 .input {
   font-size: 1.5em;
   border: 1px solid hsl(209, 56%, 63%);
