h1 en blanc au :hover et :active
Corrige le problème sur iOS qui fait que c’était en orange
Le problème vient d’InstantClick qui laisse le hover après un changement de page, et FastClick met ce hover sur ce h1

--- a/public/style.css
+++ b/public/style.css
@@ -92,6 +92,10 @@ h1, h2, h3 {
   display: inline-block;
 }
 
+.site-title-link:hover, .site-title-link:active {
+  color: white !important;
+}
+
 .site-title-spacer {
   padding-right: 1px;
 }
