--- a/public/style.css
+++ b/public/style.css
@@ -53,13 +53,9 @@ h1, h2, h3 {
   }
 }
 
-.desktop {
-  display: none;
-}
-
-@media (min-width: 1025px) {
+@media (max-width: 1024px) {
   .desktop {
-    display: initial;
+    display: none;
   }
 }
 
