Enlevé lien titre topic

--- a/public/style.css
+++ b/public/style.css
@@ -762,6 +762,12 @@ h1, h2, h3 {
   }
 }
 
+@media (min-width: 1025px) {
+  .topic-title {
+    padding-left: 10px;
+  }
+}
+
 /* TOPIC - Pagination */
 
 .pages {
