--- a/public/style.css
+++ b/public/style.css
@@ -286,7 +286,7 @@ h1, h2, h3 {
   box-shadow: 0 1px 2px rgba(0,0,0,.1);
 }
 
-/* PAGE D’ACCUEIL */
+/* SALESPAGE */
 
 .salespage {
   padding: 10px 10px;
@@ -317,6 +317,16 @@ h1, h2, h3 {
   width: 232px;
   height: 136px;
 }
+
+.salespage .cta {
+  padding: 1em 0;
+}
+
+.salespage .cta a {
+  padding: 1em 0;
+}
+
+/* ACCUEIL */
 
 @media (min-width: 500px) {
   .favorites-index {
