Fix espace entre form de post et bouton post
Il était là dû au inline-block appliqué quand <550px

--- a/public/style.css
+++ b/public/style.css
@@ -1462,12 +1462,16 @@ h1, h2, h3 {
 }
 
 .form-post-inner #captcha-container {
+  display: none;
+}
+
+.form-post-inner #captcha-container.shown {
   display: inline-block;
   text-align: center;
 }
 
 @media (min-width: 550px) {
-  .form-post-inner #captcha-container {
+  .form-post-inner #captcha-container.shown {
     display: inline;
     text-align: right;
   }
