--- a/public/style.css
+++ b/public/style.css
@@ -416,6 +416,7 @@ h1, h2, h3 {
   font-family: sans-serif;
   width: 100%;
   box-shadow: inset 0 1px 3px rgba(153, 204, 0, .4);
+  -webkit-appearance: none; /* Permettre de changer la shadow inset d’iOS */
 }
 
 @media (min-width: 1025px) {
@@ -1469,7 +1470,6 @@ h1, h2, h3 {
   padding: 3px 5px;
   border-width: 1px 0;
   border-color: #9c0;
-  -webkit-appearance: none;
   margin-bottom: 10px;
 }
 
