--- a/public/style.css
+++ b/public/style.css
@@ -1020,8 +1020,8 @@ h1, h2, h3 {
 
     float: right;
     position: absolute;
-    right: 34px;
-    top: 3px;
+    right: 36px;
+    top: -5px;
   }
 }
 
@@ -1053,13 +1053,14 @@ h1, h2, h3 {
   .message .meta-actions .meta-permalink {
     background: hsl(217, 68%, 98%);
     padding: 2px 4px;
-    border: 1px solid rgba(0,0,0,.1);
-    border-radius: 3px;
+    border: 1px solid rgba(192, 215, 237, .8);
+    border-radius: 2px;
     color: #333;
   }
 
   .message.odd .meta-actions .meta-permalink {
     background: hsl(0, 0%, 99%);
+    border-color: rgba(209, 209, 209, .8);
   }
 }
 
