--- a/public/style.css
+++ b/public/style.css
@@ -1553,6 +1553,12 @@ h1, h2, h3 {
   }
 }
 
+@media (MAX-width: 1024px) {
+  .form-post-button {
+    text-align: center;
+  }
+}
+
 /* FOOTER */
 
 .site-footer {
