--- a/public/style.css
+++ b/public/style.css
@@ -1376,6 +1376,7 @@ h1, h2, h3 {
   overflow: hidden;
   background-image: url(/images/ic_visibility_24px.svg?);
   color: transparent;
+  opacity: .25;
 }
 
 @media (min-width: 1025px) {
@@ -1384,6 +1385,7 @@ h1, h2, h3 {
     height: initial;
     background-image: initial;
     color: inherit;
+    opacity: initial;
   }
 }
 
