--- a/public/style.css
+++ b/public/style.css
@@ -1280,8 +1280,8 @@ h1, h2, h3 {
 }
 
 .message .bloc-spoil-jv {
-  background: red;
-  background-image: linear-gradient(rgb(255,64,64), rgb(255,96,96));
+  background: #fcc;
+  background: linear-gradient(rgba(255,64,64, .7), rgba(255,96,96,.8));
   border: 1px solid red;
   border-radius: 2px;
   padding: 0 2px;
