--- a/public/style.css
+++ b/public/style.css
@@ -1288,6 +1288,8 @@ h1, h2, h3 {
   margin-bottom: 1em;
   display: inline-block;
   max-width: 100%;
+  max-height: 100px;
+  overflow: hidden;
 }
 
 .message .bloc-spoil-jv.en-ligne {
@@ -1300,6 +1302,8 @@ h1, h2, h3 {
 
 .message .bloc-spoil-jv.shown {
   background: transparent;
+  max-height: none;
+  overflow: visible;
 }
 
 .message .bloc-spoil-jv.shown .contenu-spoil {
