--- a/public/style.css
+++ b/public/style.css
@@ -855,6 +855,11 @@ h1, h2, h3 {
   background: #eee;
 }
 
+.pages .next-page {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
 .pages .active {
   background: #f60;
   color: white;
