--- a/public/style.css
+++ b/public/style.css
@@ -1228,6 +1228,10 @@ h1, h2, h3 {
   }
 }
 
+.message .contentest {
+  margin: 1em 0;
+}
+
 .message .edit-mention {
   font-size: .8em;
   color: rgba(0,0,0,.5);
@@ -1276,7 +1280,6 @@ h1, h2, h3 {
   border: 1px solid red;
   border-radius: 2px;
   padding: 0 2px;
-  margin-bottom: 1em;
   display: inline-block;
   max-width: 100%;
   max-height: 100px;
