--- a/public/style.css
+++ b/public/style.css
@@ -205,7 +205,32 @@ h1, h2, h3 {
     margin: 0;
     width: 20%;
     float: left;
+    margin: 10px 0;
   }
+}
+
+.ouvrir-jvc {
+  text-align: right;
+  margin-bottom: 20px;
+}
+
+@media (MAX-width: 1024px) {
+  .ouvrir-jvc {
+    display: none;
+  }
+}
+
+.ouvrir-jvc a {
+  display: inline-block;
+  border: 1px solid #ddd;
+  padding: 4px 10px;
+  border-radius: 5px;
+  color: #333;
+}
+
+.ouvrir-jvc a:hover {
+  border-color: #ccc;
+  box-shadow: 0 1px 2px rgba(0,0,0,.1);
 }
 
 .aside .menu {
@@ -272,28 +297,6 @@ h1, h2, h3 {
 
 .clearfix {
   clear: both;
-}
-
-.ouvrir-jvc {
-  display: block;
-  position: absolute;
-  right: 30px;
-  border: 1px solid #ddd;
-  padding: 4px 10px;
-  border-radius: 5px;
-  top: 20px;
-  color: #333;
-}
-
-@media (MAX-width: 1024px) {
-  .ouvrir-jvc {
-    display: none;
-  }
-}
-
-.ouvrir-jvc:hover {
-  border-color: #ccc;
-  box-shadow: 0 1px 2px rgba(0,0,0,.1);
 }
 
 /* SALESPAGE */
