--- a/public/style.css
+++ b/public/style.css
@@ -863,7 +863,7 @@ h1, h2, h3 {
   background: #eee;
 }
 
-.pages .next-page {
+.pages-bottom .next-page {
   font-size: 1.2em;
   font-weight: bold;
 }
